<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RatingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ratingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:text="@string/appRatingMsg"
            android:textSize="30sp" />

        <RatingBar
            android:id="@+id/appRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusedByDefault="true"
            android:progress="@integer/material_motion_duration_long_1"
            android:progressTint="#FF5733"
            android:rating="5"
            android:stepSize="1" />

        <TextView
            android:id="@+id/ratingMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:text="@string/defaultRatingMsg"
            android:textSize="25sp" />

        <Button
            android:id="@+id/rateApp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/transparent_bg_bordered_button"
            android:fontFamily="@font/alata"
            android:onClick="rateApp"
            android:text="@string/rateBtnMsg"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>